syntax = "proto3";

package signal18.replication_manager.v3;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "messages.proto";

option go_package = "github.com/signal18/replication-manager;repmanv3";

service ClusterPublicService {
    rpc ClusterStatus(Cluster) returns (StatusMessage) {
        // replaces /api/clusters/{clusterName}/status
        option (google.api.http) = {
            get: "/v3/clusters/{name}/status"
        };
    }

    rpc MasterPhysicalBackup(Cluster) returns (google.protobuf.Empty) {
        // replaces /api/clusters/{name}/actions/master-physical-backup
        option (google.api.http) = {
            get: "/v3/clusters/{name}/actions/master-physical-backup"
        };
    }
}